<resources>
    <string name="app_name">Geometry Helper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="area_tri">Area of a Triangle</string>
    <string name="title_activity_area_triangle">Area of a Triangle</string>
    <string name="base_title">Base =</string>
    <string name="height_title">Height =</string>
    <string name="area_title">Area =</string>
    <string name="title_activity_area_circle">Area of a Circle</string>
    <string name="radius">Radius =</string>
    <string name="quad_form_info">Quadratic Formula</string>
    <string name="title_activity_quad_form">Quadratic Formula</string>
    <string name="pythDesc" translatable="false">A&#178; + B&#178; = C&#178;</string>
    <string name="quadDesc" translatable="false">Ax&#178; + Bx + C = 0</string>
    <string name="quadA" translatable="false">A =</string>
    <string name="quadB" translatable="false">B =</string>
    <string name="quadC" translatable="false">C =</string>
    <string name="Calc">Calculate</string>
    <string name="title_activity_vol_sph">Volume of a Sphere</string>
    <string name="title_activity_vol_cyln">Volume of a Cylinder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_cylinder">Cylinder</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9167626118044785/2331459159</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Number of decimals</string>
    <string name="numDec_pref">example_list</string>
    <string-array name="pref_example_list_titles">
        <item>0 decimals</item>
        <item>1 decimal</item>
        <item>2 decimals</item>
        <item>3 decimals</item>
        <item>4 decimals</item>
        <item>5 decimals</item>
        <item>6 decimals</item>
        <item>7 decimals</item>

    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>


    <string name="title_activity_sph">Sphere</string>
    <string name="trap_b1_txt">Base\u2081 =</string>
    <string name="trap_b2_txt">Base\u2082 =</string>
    <string name="trap_height_txt">Height =</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="math_types">
        <item>Geometry</item>
        <item>Algebra II</item>
        <item>Settings</item>
    </string-array>

    <string name="geo">Geometry</string>
    <string name="alg">Algebra II</string>
    <string name="set">Settings</string>

    <string name="empty_sq" translatable="false">0 un²</string>
    <string name="empty_cu" translatable="false">0 un³</string>
    <string name="empty" translatable="false">0 un</string>

    <string name="sq_unit" translatable="false"> un²</string>
    <string name="cu_unit" translatable="false"> un³</string>
    <string name="unit" translatable="false"> un</string>

    <string name="surf_area">Surface Area =</string>
    <string name="volume">Volume =</string>

    <string name="hello_blank_fragment">Welcome \'n\' Stuff</string>

    <string-array name="geo_card_titles">
        <item>Triangles</item>
        <item>Circles</item>
        <item>Quadratic Formula</item>
        <item>Spheres</item>
        <item>Right Cylinders</item>
        <item>Trapezoid</item>
    </string-array>

    <string-array name="pane_titles">
        <item>Welcome</item>
        <item>Geometry</item>
        <item>Algebra II</item>
    </string-array>

    <string-array name="pane_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="tri_transition_name" translatable="false">geoTransition0</string>
    <string name="circle_transition_name" translatable="false">geoTransition1</string>
    <string name="quad_transition_name" translatable="false">geoTransition2</string>
    <string name="sphere_transition_name" translatable="false">geoTransition3</string>

    <string name="leftParen" translatable="false">(</string>
    <string name="rightParen" translatable="false">)</string>
    <string name="comma" translatable="false">,</string>
    <string name="distFin" translatable="true">Distance =</string>

</resources>
