<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".HomeScreen"
    android:id="@+id/home_screen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <GridLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:id="@+id/cardGrid"
            android:useDefaultMargins="true">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_tri"
                android:layout_width="180dp"
                android:layout_height="200dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp"
                android:background="@drawable/ripple"
                android:layout_row="0"
                android:layout_column="0">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/tri_img"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:src="@drawable/tri_img"
                        android:transitionName="@string/tirangle_transition_name">

                    </ImageView>

                    <TextView
                        android:id="@+id/tri_info"
                        android:text="@string/area_tri"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        >

                    </TextView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_circle"
                android:layout_gravity="top"
                android:layout_width="180dp"
                android:layout_height="200dp"
                card_view:cardCornerRadius="4dp"
                android:layout_row="0"
                android:layout_column="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/tri_circ"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:src="@drawable/circle_img"
                        android:transitionName="@string/circle_transition_name">

                    </ImageView>

                    <TextView
                        android:id="@+id/circ_info"
                        android:text="@string/title_activity_area_circle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:layout_marginLeft="13dp"
                        android:gravity="center_vertical"
                        >

                    </TextView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_quad_form"
                android:layout_gravity="top"
                android:layout_width="180dp"
                android:layout_height="200dp"
                card_view:cardCornerRadius="4dp"
                android:layout_row="1"
                android:layout_column="0">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/quad_form_img"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:src="@drawable/circle_img"
                        android:transitionName="@string/circle_transition_name">

                    </ImageView>

                    <TextView
                        android:id="@+id/quad_form_info"
                        android:text="@string/quad_form_info"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:layout_marginLeft="13dp"
                        android:gravity="center_vertical"
                        >

                    </TextView>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </GridLayout>
    </ScrollView>

</RelativeLayout>
