<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.danny.geometryhelper.algebra2.Pythagorean"
    android:id="@+id/pythag_activity"
    android:theme="@style/AppTheme">
    <android.support.v7.widget.Toolbar
        android:id="@+id/pythagToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/AppThemeToolbar"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="64dp">

        <LinearLayout
            android:id="@+id/pythDescLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pythDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pythDesc"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/pyth_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/pythag_img"
                android:transitionName="algTransition2" />

        </LinearLayout>


        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pythDescLayout"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TableRow
                android:id="@+id/pythTableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/pythATxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/quadA"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pythBTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quadB"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pythCTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/quadC"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pythTableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <EditText
                    android:id="@+id/pythANum"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/pythBNum"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned" />

                <EditText
                    android:id="@+id/pythCNum"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal|numberSigned" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/clrBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tableLayout1"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="Clear" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>