<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.danny.geometryhelper.Geometry.Trapezoid"
    android:id="@+id/trap_activity"
    android:theme="@style/AppTheme">
    <android.support.v7.widget.Toolbar
        android:id="@+id/trapToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/AppThemeToolbar"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trap_b1_txt"
            android:id="@+id/trap_b1_txt"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="105dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trap_b2_txt"
            android:id="@+id/trap_b2_txt"
            android:layout_below="@+id/trap_b1_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trap_height_txt"
            android:id="@+id/trap_height_txt"
            android:layout_below="@+id/trap_b2_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Area = "
            android:id="@+id/trap_area"
            android:layout_below="@+id/trap_height_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:id="@+id/editText4"
            android:layout_alignBottom="@+id/trap_height_txt"
            android:layout_toRightOf="@+id/trap_height_txt"
            android:maxLength="10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:id="@+id/editText5"
            android:layout_above="@+id/trap_height_txt"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4"
            android:maxLength="9" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:id="@+id/editText6"
            android:layout_above="@+id/trap_b2_txt"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>