<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.danny.geometryhelper.algebra2.DistanceForm"
    android:id="@+id/dist_activity"
    android:theme="@style/AppTheme">
    <android.support.v7.widget.Toolbar
        android:id="@+id/distToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/AppThemeToolbar"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftParen"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="147dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="3"
            android:id="@+id/editX1"
            android:nextFocusDown="@+id/editY1"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma"
            android:id="@+id/textView3"
            android:layout_alignBottom="@+id/editX1"
            android:layout_toRightOf="@+id/editX1"
            android:layout_toEndOf="@+id/editX1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="3"
            android:id="@+id/editY1"
            android:layout_alignTop="@+id/editX1"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:nextFocusDown="@+id/editX2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightParen"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/editY1"
            android:layout_toEndOf="@+id/editY1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftParen"
            android:id="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="3"
            android:id="@+id/editX2"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:nextFocusDown="@+id/editY2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma"
            android:id="@+id/textView6"
            android:layout_alignBottom="@+id/editX2"
            android:layout_toRightOf="@+id/editX2"
            android:layout_toEndOf="@+id/editX2"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="3"
            android:id="@+id/editY2"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightParen"
            android:id="@+id/textView7"
            android:layout_alignBottom="@+id/editY2"
            android:layout_toRightOf="@+id/editY2"
            android:layout_toEndOf="@+id/editY2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Distance = "
            android:id="@+id/textView8"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/editX2"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>